# face-detection

./: LICENSE  Makefile  README.md  deploying.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: =2.0.0
docs/source/: conf.py  installation.rst  usage.rst
src/face_detection/: auto_blur.py  detector.py  exceptions.py  types.py
tests/: rename_images.py  test_face_detection.py  test_utils.py  test_with_real_images.py
